# vizscan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/copilot-instructions/: safety-guidelines.md  update-pre-commit-hooks.md
.github/workflows/: run-vizscan.yml  testbuild.yml
docs/prompts/: 001_gemini_music-visualization-epilepsy-safety-guidelines.md
tests/: test_cli.py  test_dynamic.py  test_presets.py  test_reports.py  test_static.py
tests/presets/: dynamic_edge.milk  dynamic_fail.milk  safe.milk  static_ban.milk  static_critical_modulo.milk  static_critical_tan_color.milk  static_warn_high_freq.milk  static_warn_step.milk  static_warn_tan_motion.milk
vizscan/: cli.py  constants.py  dynamic.py  reports.py  static.py
